home change recover

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
   </nav>
   <div class="header-text">
    
-    <h1>Hi,I'm <span>Dinithi Vi</span><br> 
+    <h1>Hi,I'm <span>Dinithi </span><br> 
         Computer Science Student</h1>
         <p class="intro-text">
             * Bachelor of Computer Science <br>* Degree from the University
